Fixed repo issue
switched hrefs to backup files
removed extra unused css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Recipes</title>
-    <link rel="stylesheet" href="../odin-recipes/styles.css" />
+    <link rel="stylesheet" href="../odin-recipes-backup/styles.css" />
   </head>
   <body>
     <div class="mainpage">
@@ -12,7 +12,7 @@
       <div class="gif-main-header">
         <img
           class="gif-home"
-          src="../odin-recipes/Images/homer-pizza-gif"
+          src="../odin-recipes-backup/Images/homer-pizza-gif"
           alt="gif for home page"
         />
       </div>
@@ -20,42 +20,42 @@
         <p>
           <a
             class="hyperlink-color"
-            href="../odin-recipes/recipes/slow-cooked-mac-n-cheese.html"
+            href="../odin-recipes-backup/recipes/slow-cooked-mac-n-cheese.html"
             >Slow Cooked Mac n Cheese</a
           >
         </p>
-        <a href="../odin-recipes/recipes/slow-cooked-mac-n-cheese.html">
+        <a href="../odin-recipes-backup/recipes/slow-cooked-mac-n-cheese.html">
           <img
             class="image-one-main-page"
-            src="Images/237311-slow-cooker-mac-and-cheese-DDMFS-4x3-9b4a15f2c3344c1da22b034bc3b35683.webp"
+            src="../odin-recipes-backup/Images/237311-slow-cooker-mac-and-cheese-DDMFS-4x3-9b4a15f2c3344c1da22b034bc3b35683.webp"
             alt="Slow cooked cheesy macaroni"
           />
         </a>
         <p>
           <a
             class="hyperlink-color"
-            href="../odin-recipes/recipes/shredded-chicken-tacos.html"
-            >Slow Cooked Shredded Chicken</a
-          >
+            href="../odin-recipes-backup/recipes/shredded-chicken-tacos.html"
+            >Slow Cooked Shredded Chicken
+          </a>
         </p>
-        <a href="../odin-recipes/recipes/shredded-chicken-tacos.html">
+        <a href="../odin-recipes-backup/recipes/shredded-chicken-tacos.html">
           <img
-            class="image-two-main-page"
-            src="../odin-recipes/Images/242342-fiesta-slow-cooker-shredded-chicken-tacos-ddmfs-3X2-0902-775cf5010b5b46cdbdf2ca50993628a9.webp"
-            alt="Slow cooked chicken in pita bread"
+            class="image-one-main-page"
+            src="../odin-recipes-backup/Images/242342-fiesta-slow-cooker-shredded-chicken-tacos-ddmfs-3X2-0902-775cf5010b5b46cdbdf2ca50993628a9.webp"
+            alt="Slow cooked cheesy macaroni"
           />
         </a>
         <p>
           <a
             class="hyperlink-color"
-            href="../odin-recipes/recipes/Cuban-Ropa-Vieja.html"
+            href="../odin-recipes-backup/recipes/Cuban-Ropa-Vieja.html"
             >Cuban Ropa Vieja</a
           >
         </p>
-        <a href="../odin-recipes/recipes/Cuban-Ropa-Vieja.html">
+        <a href="../odin-recipes-backup/recipes/Cuban-Ropa-Vieja.html">
           <img
             class="image-three-main-page"
-            src="../odin-recipes/Images/79301-cuban-ropa-vieja-DDMFS-4x3-0daa8085c6cd4423981002ffae990fb1.webp"
+            src="../odin-recipes-backup/Images/79301-cuban-ropa-vieja-DDMFS-4x3-0daa8085c6cd4423981002ffae990fb1.webp"
             alt="Ropa Vieja served in bowl"
           />
         </a>
