--- a/recipes/shredded-chicken-tacos.html
+++ b/recipes/shredded-chicken-tacos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slow cooked Shredded Chicken</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../odin-recipes-backup/styles.css" />
   </head>
   <body class="page-two-body">
     <div class="page-two">
