--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Recipes</title>
-    <link rel="stylesheet" href="../odin-recipes-backup/styles.css" />
+   <link rel="stylesheet" href="../odin-recipes-backup/styles.css">
   </head>
   <body>
     <div class="mainpage">
