--- a/recipes/shredded-chicken-tacos.html
+++ b/recipes/shredded-chicken-tacos.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slow cooked Shredded Chicken</title>
-    <link rel="stylesheet" href="../odin-recipes-backup/styles.css" />
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body class="page-two-body">
     <div class="page-two">
-      <h1>Fiesta Slow Cooker Shredded Chicken Tacos</h1>
+      <div class="page-two-header">
+      <h1 class="page-two-title">Fiesta Slow Cooker Shredded Chicken Tacos</h1>
       <p>
         <a class="page-two-return" href="../index.html"> Back to Recipes</a>
       </p>
+    </div>
       <img
         class="Cooked meat"
         src="../Images/242342-fiesta-slow-cooker-shredded-chicken-tacos-ddmfs-3X2-0902-775cf5010b5b46cdbdf2ca50993628a9.webp"
